--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
 
   <body>
     <div class="container">
-    <%= yield %>
+      <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
