--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -14,4 +14,6 @@
 		<%= f.label :description %>
 		<%= f.text_area :description, rows: 5, class: 'form-control', id: 'task_description' %>
 	</div>
+	<%= f.submit nil, class: 'btn btn-primary' %>
+
 <% end %>
