--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div>Taskleaf</div>
+    </nav>
     <div class="container">
       <% if flash[:notice] %>
       <div class="alert alert-success">
