--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,12 @@
+<% if task.errors.present? %>
+	<ul class="error_explanation">
+		<% task.errors.full_messages.each do |message| %>
+			<li><%= message %></li>
+		<% end %>
+	</ul>
+<% end %>
+
+
 <%= form_with model: task, local: true do |f| %>
 	<div class="form-group">
 		<%= f.label :name %>
