--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div>Taskleaf</div>
+      <ul class="nav navbar-nav ml-auto">
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'タスク一覧', tasks_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
     </nav>
     <div class="container">
       <% if flash[:notice] %>
